Add June 2013 BAT as per Andy

--- a/src/announce.html
+++ b/src/announce.html
@@ -1,5 +1,5 @@
   <ul>
-    <li><a href="http://hub.opensolaris.org/bin/view/Community+Group+nfs/Connectathon13">Connecthathon 2013</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
+    <li><a href="/Events/2013/June/BAT/index.html">June 2013 BAT</a> - hosted by <a href="http://www.netapp.com">NetApp</a>.</li>
     <li><a href="/Documents/ConnectAThon/index.html">Archive of Connectathon presentations</a>.</li>
     <li><a href="/Documents/nasconf/index.html">Archive of NAS Conference presentations</a>.</li>
   </ul>
