--- a/Events/index.html
+++ b/Events/index.html
@@ -40,12 +40,13 @@
 
 <h1> On deck </h1>
 <ul>
-  <li><a href="http://hub.opensolaris.org/bin/view/Community+Group+nfs/Connectathon13">Connecthathon 2013</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
+  <li><a href="/Events/2013/June/BAT/index.html">June 2013 BAT</a> - hosted by <a href="http://www.netapp.com">NetApp</a>.</li>
 </ul>
 
 <h1> Living in past glory </h1>
 
 <ul>
+  <li><a href="http://hub.opensolaris.org/bin/view/Community+Group+nfs/Connectathon13">Connecthathon 2013</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
   <li><a href="/Events/2012/October/BAT/index.html">Fall 2012 BAT</a> - hosted by <a href="http://www.netapp.com">NetApp</a>.</li>
   <li><a href="http://www.citi.umich.edu/bakeathon.html">Summer 2012 BAT</a> - hosted by <a href="http://www.citi.umich.edu">CITI</a>.</li>
   <li><a href="http://hub.opensolaris.org/bin/view/Community+Group+nfs/Connectathon+2012">Connecthathon 2012</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
