Update registration request information
Signed-off-by: Andy Adamson <andros@netapp.com>

--- a/src/bat0613.html
+++ b/src/bat0613.html
@@ -3,7 +3,8 @@
   <ul>
     <li>Where: <a href="http://workantile.com">Workantile</a>, Ann Arbor, MI</li>
     <li>When: June 10th - 14th</li>
-    <li>Registration: Send <a href="mailto:andros &copy; netapp.com?Subject=BAT\ Registration">Andy Adamson</a> email - in particular, he needs to know if you need to ship equipment to the site.</li>
+    <li>Registration: Send <a href="mailto:andros &copy; netapp.com?Subject=BAT\ Registration">Andy Adamson</a> email with "June Bakeathon 2013" in the subject - in particular, he needs to know if you need to ship equipment to the site and
+how many engineers will be attending.</li>
   </ul>
 
   <h1>Testing Focus</h1>
