--- a/src/bat0613.html
+++ b/src/bat0613.html
@@ -3,7 +3,7 @@
   <ul>
     <li>Where: <a href="http://workantile.com">Workantile</a>, Ann Arbor, MI</li>
     <li>When: June 10th - 14th</li>
-    <li>Registration: Send <a href="mailto:andros &copy; netapp.com?Subject=BAT\ Registration">Andy Adamson</a> email with "June Bakeathon 2013" in the subject - in particular, he needs to know if you need to ship equipment to the site and
+    <li>Registration: Send <a href="mailto:andros &copy; netapp.com?Subject=June Bakeathon 2013">Andy Adamson</a> email with "June Bakeathon 2013" in the subject - in particular, he needs to know if you need to ship equipment to the site and
 how many engineers will be attending.</li>
   </ul>
 
@@ -68,5 +68,5 @@ how many engineers will be attending.</li>
 
   <p>Please feel free to contact Andy directly with questions.</p>
 
-  <p><a href="mailto:andros &copy; netapp.com?Subject=BAT">Andy Adamson</a></p>
+  <p><a href="mailto:andros &copy; netapp.com?Subject=June Bakeathon 2013">Andy Adamson</a></p>
 
