--- a/src/bat0613.html
+++ b/src/bat0613.html
@@ -2,7 +2,7 @@
 
   <ul>
     <li>Where: <a href="http://workantile.com">Workantile</a>, Ann Arbor, MI</li>
-    <li>When: June 10th - 14th</li>
+    <li>When: June 10th - 14th NOTE: We are considering moving the Bakeathon to June 17 - 21. Please email <a href="mailto:andros &copy; netapp.com?Subject=BAT\ Registration">Andy Adamson</a>  if this change does not work for you</li>
     <li>Registration: Send <a href="mailto:andros &copy; netapp.com?Subject=BAT\ Registration">Andy Adamson</a> email with "June Bakeathon 2013" in the subject - in particular, he needs to know if you need to ship equipment to the site and
 how many engineers will be attending.</li>
   </ul>
