Add the barebones for the Red Hat BAT in Spet 2013

--- a/src/announce.html
+++ b/src/announce.html
@@ -1,5 +1,5 @@
   <ul>
-    <li><a href="/Events/2013/June/BAT/index.html">June 2013 BAT</a> - hosted by <a href="http://www.netapp.com">NetApp</a>.</li>
+    <li><a href="/Events/2013/September/BAT/index.html">September 2013 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
     <li><a href="/Documents/ConnectAThon/index.html">Archive of Connectathon presentations</a>.</li>
     <li><a href="/Documents/nasconf/index.html">Archive of NAS Conference presentations</a>.</li>
   </ul>
