--- a/src/bat0913.html
+++ b/src/bat0913.html
@@ -1,9 +1,9 @@
   <h1>Overview</h1>
 
   <ul>
-    <li>Where: <a href="http://www.redhat.com">Red Hat</a>, Westford, MA</li>
+    <li>Where: <a href="https://maps.google.com/maps?q=Red+Hat+Inc,+314+Littleton+Rd,+Westford,+MA&hl=en&sll=42.553981,-71.443984&sspn=0.010875,0.019419&oq=Red+Hat+314+Littleton+Rd,+Westford,&hq=Red+Hat+Inc,&hnear=314+Littleton+Rd,+Westford,+Massachusetts+01886&t=m&z=16">Red Hat</a></li>
     <li>When: September 23rd - 27th </li>
-    <li>Registration: Send <a href="mailto:steved &copy; redhat.com?Subject=Spetember Bakeathon 2013">Steve Dickson</a> email with "September Bakeathon 2013" in the subject - in particular, he needs to know if you need to ship equipment to the site and how many engineers will be attending.</li>
+    <li>Registration: Send <a href="mailto:steved@redhat.com?Subject=Spetember Bakeathon 2013">Steve Dickson</a> email with "September Bakeathon 2013" in the subject - in particular, he needs to know if you need to ship equipment to the site and how many engineers will be attending.</li>
   </ul>
 
   <h1>Testing Focus</h1>
@@ -25,8 +25,7 @@
   <h1>Registration</h1>
 
    <p>What we need is the number of attendees from your company,
-      their names (and email) for badging purposes, and the type of
-      equipment you will be bringing.</p>
+      their names (and email) and the type of equipment you will be bringing.</p>
 
    <p>We are primarily interested in if the equipment has special
       power requirements and if it is loud.</p>
@@ -34,19 +33,46 @@
    <p>By the way, please look at the <a href="/Documents/Requirements/event_hosting.html">Event Hosting Requirements</a> and let us know if you plan to use
       a network service not listed.</p>
 
-  <h1>Address</h1>
+  <h1>Shipping Address</h1>
 
-  <p>Red Hat Westford Office in Westford, MA; more details TBA</p>
+    <a href="https://maps.google.com/maps?q=Red+Hat+Inc,+314+Littleton+Rd,+Westford,+MA&hl=en&sll=42.553981,-71.443984&sspn=0.010875,0.019419&oq=Red+Hat+314+Littleton+Rd,+Westford,&hq=Red+Hat+Inc,&hnear=314+Littleton+Rd,+Westford,+Massachusetts+01886&t=m&z=16">Red Hat 314 Littleton Rd, Westford, MA 01886</a></li>
 
   <h1>Lodging</h1>
 
   <h3> Bakeathon Recommended Hotel Information</h3>
+  <p>  There are 25 blocked rooms, 25 King Beds (if you need double beds just let me (or them) know).</p>
+  <p>  Use the keywords <b>Red Hat Bakeathon</b> to refer to the room block.</p>
 
-  <p>Details TBA</p>
+    <ul>
+      <li><a href="http://westfordregency.com/">Westford Regency Inn</a></li>
+      <li>219 Littleton RD</li>
+      <li>Westford, MA 01886</li>
+      <li>Phone: 734-995-5900</li>
+      <li>Fax: 734-995-2937</li>
+      <li><a href="http://westfordregency.com/directions/driving-directions/">Directions</a></li>
+	  <li><a href="https://maps.google.com/maps?saddr=Westford+Regency+Inn+and+Conference+Center,+Littleton+Road,+Westford,+MA&daddr=Red+Hat+Inc,+314+Littleton+Road,+Westford,+MA+01886&hl=en&sll=42.742628,-71.41479&sspn=0.693884,1.242828&geocode=FcF4iQIdOg6--yE3UZM6hskxbSlvJnK31JfjiTE3UZM6hskxbQ%3BFX1SiQId8Nm9-ym_QV2cOZbjiTFfxnYEp11Rtw&oq=Westford+Regency+Inn&mra=ls&t=m&z=16">Map</a></li>
+    </ul> 
+ 
+  <p>Call or have your travel call for booking the block rate: $105 nightly room rate. </p> 
+  <p>The Bookings need to happen before <b>Mon Sept 2ed</b></p>
+
+  <h1>Airports</h1> 
+	<ol>
+	<li>
+	<a href="https://maps.google.com/maps?saddr=Logan+International+Airport,+Boston,+MA&daddr=Red+Hat+Inc,+314+Littleton+Road,+Westford,+MA+01886&hl=en&sll=42.555246,-71.443985&sspn=0.010875,0.019419&geocode=FQeChgId41HE-yFEUS0fw5STDCk3SdrVFHDjiTFEUS0fw5STDA%3BFX1SiQId8Nm9-ym_QV2cOZbjiTFfxnYEp11Rtw&oq=Log&mra=ls&t=m&z=11">Boston (BOS) (38 mi, 43 mins)</a>
+	</li>
+	<li>
+	<a href="https://maps.google.com/maps?saddr=Manchester-Boston+Regional+Airport,+Airport+Road,+Manchester,+NH&daddr=Red+Hat+Inc,+314+Littleton+Road,+Westford,+MA+01886&hl=en&sll=42.485696,-71.231867&sspn=0.348378,0.621414&geocode=FfoCjwIdzdG9-yE8iOTOzDbWNyndFxuINkziiTE8iOTOzDbWNw%3BFX1SiQId8Nm9-ym_QV2cOZbjiTFfxnYEp11Rtw&oq=Manchester+A&mra=ls&t=m&z=10">Manchester, NH (MHT) (38 mi, 40 mins)</a>
+	</li>
+	</ol>
+	<p>Note: The Manchester Airport is much less congested than Boston Logan</p> 
+
+  <h1>Restaurants</h1> 
+  <p> TBA </p>
 
   <h1>Contact</h1>
 
   <p>Please feel free to contact Steve directly with questions.</p>
 
-  <p><a href="mailto:steved &copy; redhat.com?Subject=September Bakeathon 2013">Steve Dickson</a></p>
+  <p><a href="mailto:steved@redhat.com?Subject=September Bakeathon 2013">Steve Dickson</a></p>
 
