Corrected the Hotel phone number
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bat0913.html
+++ b/src/bat0913.html
@@ -47,8 +47,7 @@
       <li><a href="http://westfordregency.com/">Westford Regency Inn</a></li>
       <li>219 Littleton RD</li>
       <li>Westford, MA 01886</li>
-      <li>Phone: 734-995-5900</li>
-      <li>Fax: 734-995-2937</li>
+      <li>Phone: (978) 692-8200</li>
       <li><a href="http://westfordregency.com/directions/driving-directions/">Directions</a></li>
 	  <li><a href="https://maps.google.com/maps?saddr=Westford+Regency+Inn+and+Conference+Center,+Littleton+Road,+Westford,+MA&daddr=Red+Hat+Inc,+314+Littleton+Road,+Westford,+MA+01886&hl=en&sll=42.742628,-71.41479&sspn=0.693884,1.242828&geocode=FcF4iQIdOg6--yE3UZM6hskxbSlvJnK31JfjiTE3UZM6hskxbQ%3BFX1SiQId8Nm9-ym_QV2cOZbjiTFfxnYEp11Rtw&oq=Westford+Regency+Inn&mra=ls&t=m&z=16">Map</a></li>
     </ul> 
