Updated the Restaurants and Paking info
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bat0913.html
+++ b/src/bat0913.html
@@ -36,9 +36,15 @@
   <h1>Shipping Address</h1>
 
     <a href="https://maps.google.com/maps?q=Red+Hat+Inc,+314+Littleton+Rd,+Westford,+MA&hl=en&sll=42.553981,-71.443984&sspn=0.010875,0.019419&oq=Red+Hat+314+Littleton+Rd,+Westford,&hq=Red+Hat+Inc,&hnear=314+Littleton+Rd,+Westford,+Massachusetts+01886&t=m&z=16">Red Hat 314 Littleton Rd, Westford, MA 01886</a></li>
+  <h1>Parking</h1>
+  <p>
+  There are parking lots in front and in the back of the building. The lot in front is for visitors 
+  so feel free to use it and it is the closest. There are three parking lots in the back. One right 
+  behind the building and two across the street, those parking lots are a bit of a walk so go for 
+  the front lot.
+  </p>
 
   <h1>Lodging</h1>
-
   <h3> Bakeathon Recommended Hotel Information</h3>
   <p>  There are 25 blocked rooms, 25 King Beds (if you need double beds just let me (or them) know).</p>
   <p>  Use the keywords <b>Red Hat Bakeathon</b> to refer to the room block.</p>
@@ -55,6 +61,7 @@
   <p>Call or have your travel call for booking the block rate: $105 nightly room rate. </p> 
   <p>The Bookings need to happen before <b>Mon Sept 2ed</b></p>
 
+
   <h1>Airports</h1> 
 	<ol>
 	<li>
@@ -67,8 +74,29 @@
 	<p>Note: The Manchester Airport is much less congested than Boston Logan</p> 
 
   <h1>Restaurants</h1> 
-  <p> TBA </p>
+  <ol>
+  <li>
+     Burton Grill, 1 Cornerstone Square  Westford, MA 01886, (978) 692-1220,
+     <a href="http://www.burtonsgrill.com/">www.burtonsgrill.com</a>
 
+  </li>
+  <li>
+      Eviva Cucina, 7 Cornerstone Square  Westford, MA 01886, (978) 692-9050,
+      <a href="http://www.evvivacucina.com/">www.evvivacucina.com</a>
+  </li>
+  <li>
+      Moonstones, 185 Chelmsford St Chelmsford, MA 01824, (978) 256-7777,
+      <a href="http://www.moonstones.com/">www.moonstones.com</a>
+  </li>
+  <li>
+      Fishbones, 34 Central Square  Chelmsford, MA 01824, (978) 250-0101  
+      <a href="http://www.fishbonesofchelmsford.com">www.fishbones.com</a>
+  </li>
+  <li>
+      Gibbet Hill, 61 Lowell Road Groton, MA,  978-448-2900, 
+      <a href="http://www.gibbethillgrill.com">www.gibbethillgrill.com</a>
+  </li>
+  </ol>
   <h1>Contact</h1>
 
   <p>Please feel free to contact Steve directly with questions.</p>
