SteveD should have known about the ice law at the hotel

--- a/src/batreqs.html
+++ b/src/batreqs.html
@@ -137,6 +137,12 @@
 </ul>
 </li>
 </ul>
+<h2> Hotels</h2>
+<ul>
+<li>It is <b>not</b> the responsibility of the host to organize a hotel block.</li>
+<li>I.e., social tools can be used to do this.</li>
+<li>However, the hotel bars should not require ice be added to all liquor drinks.</li>
+</ul>
 <h2> NDA</h2>
 <ul>
 <li>Not always a requirement</li>
