Update Cthon 14 web page

--- a/src/events.html
+++ b/src/events.html
@@ -1,6 +1,6 @@
 <h1> On deck </h1>
 <ul>
-  <li><a href="http://www.ietf.org/mail-archive/web/nfsv4/current/msg12541.html">Connecthathon 2014</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
+  <li><a href="http://www.connectathon.info">Connecthathon 2014</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
 </ul>
 
 <h1> Living in past glory </h1>
