--- a/Announcements/index.html
+++ b/Announcements/index.html
@@ -39,7 +39,7 @@
 	<div id="content">
 
   <ul>
-    <li><a href="/Events/2013/September/BAT/index.html">September 2013 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
+    <li><a href="http://www.connectathon.info">Connecthathon 2014</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
     <li><a href="/Documents/ConnectAThon/index.html">Archive of Connectathon presentations</a>.</li>
     <li><a href="/Documents/nasconf/index.html">Archive of NAS Conference presentations</a>.</li>
   </ul>
