--- a/src/announce.html
+++ b/src/announce.html
@@ -1,5 +1,5 @@
   <ul>
-    <li><a href="http://www.ietf.org/mail-archive/web/nfsv4/current/msg12541.html">Connecthathon 2014</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
+    <li><a href="http://www.connectathon.info">Connecthathon 2014</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
     <li><a href="/Documents/ConnectAThon/index.html">Archive of Connectathon presentations</a>.</li>
     <li><a href="/Documents/nasconf/index.html">Archive of NAS Conference presentations</a>.</li>
   </ul>
