--- a/src/cthon/pre_dir1_talks.html
+++ b/src/cthon/pre_dir1_talks.html
@@ -41,6 +41,7 @@
 
 		<h3>Quick Jump to ConnectAThon Talks</h3>
 
+		<a class="cmenulink" href="/Documents/ConnectAThon/2014/index.html">2014</a>
 		<a class="cmenulink" href="/Documents/ConnectAThon/2013/index.html">2013</a>
 		<a class="cmenulink" href="/Documents/ConnectAThon/2012/index.html">2012</a>
 		<a class="cmenulink" href="/Documents/ConnectAThon/2011/index.html">2011</a>
