--- a/src/cthon/talks.html
+++ b/src/cthon/talks.html
@@ -1,6 +1,7 @@
 		<h1>ConnectAThon presentations</h1>
 
 		<ul>
+		<li><h2> <a href="/Documents/ConnectAThon/2014/index.html">2014</a> </h2></li>
 		<li><h2> <a href="/Documents/ConnectAThon/2013/index.html">2013</a> </h2></li>
 		<li><h2> <a href="/Documents/ConnectAThon/2012/index.html">2012</a> </h2></li>
 		<li><h2> <a href="/Documents/ConnectAThon/2011/index.html">2011</a> </h2></li>
