--- a/src/events.html
+++ b/src/events.html
@@ -1,11 +1,12 @@
 <h1> On deck </h1>
 <ul>
-  <li><a href="http://www.connectathon.info">Connecthathon 2014</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
+  <li><a href="/Events/2014/June/BAT/index.html">June 2014 BAT</a> - hosted by <a href="http://www.netapp.com">NetApp</a> and <a href="http://www.primarydata.com">Primary Data</a>.</li>
 </ul>
 
 <h1> Living in past glory </h1>
 
 <ul>
+  <li><a href="http://www.connectathon.info">Connecthathon 2014</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
   <li><a href="/Events/2013/September/BAT/index.html">September 2013 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
   <li><a href="/Events/2013/June/BAT/index.html">June 2013 BAT</a> - hosted by <a href="http://www.netapp.com">NetApp</a>.</li>
   <li><a href="http://hub.opensolaris.org/bin/view/Community+Group+nfs/Connectathon13">Connecthathon 2013</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
