Make lodging clearer

--- a/src/bat0614.html
+++ b/src/bat0614.html
@@ -52,6 +52,8 @@
 
   <h1>Lodging</h1>
 
+  <h3>TBA later</h3>
+
 <!--
   <h3> Bakeathon Recommended Hotel Information</h3>
   <p>  There are 20 blocked rooms, 10 King Bed and 10 Double.</p>
