Update June 2014 bakeathon lodging info
Signed-off-by: Andy Adamson <andros@netapp.com>

--- a/src/bat0614.html
+++ b/src/bat0614.html
@@ -52,45 +52,34 @@
 
   <h1>Lodging</h1>
 
-  <h3>TBA later</h3>
-
-<!--
   <h3> Bakeathon Recommended Hotel Information</h3>
-  <p>  There are 20 blocked rooms, 10 King Bed and 10 Double.</p>
-  <p>  Use the keywords <b>Netapp Bakeathon</b> to refer to the room block.</p>
+  <p>  There are 10 blocked rooms at a $139.00 for a single or double rate (.</p>
+  <p>  To make reservations under the group room block go to <a href="http://uswiaa.webhotel.microsdc.us/bp/search_rooms.jsp">the Weber's reservation page</a> and enter your arrival & departure dates and BAKEATHON14 in the group code field before clicking on check availability and the rooms for this block will be available for you to reserve online or call Weber's at (734) 769-2500.
+  </p>
 
     <ul>
-      <li><a href="http://www.marriott.com/arbch">The Courtyard by Marriott Ann Arbor</a></li>
-      <li>3205 Boardwalk Dr.</li>
-      <li>Ann Arbor, MI 48108</li>
-      <li>Phone: 734-995-5900</li>
-      <li>Fax: 734-995-2937</li>
+      <li><a href="http://www.webersinn.com">Weber's Ann Arbor</a></li>
+      <li>3050 Jackson Rd.</li>
+      <li>Ann Arbor, MI 48103</li>
+      <li>Phone: 734-769-2500</li>
+      <li>Toll Free: 800-443-3050</li>
     </ul> 
  
-  <p>Call or have your travel call for booking the block rate: $129* nightly room rate (regular cost would be $169).
-  </p> 
-
   <p>Hotel room rates are subject to applicable state and local taxes in effect at time of check-in. Current Michigan state tax is 6% and current local tax is 5%, for a total tax rate of 11%.
   </p>
  
     <ul>
       <li>Cutoff Date:</li>
-      <li>5/17/2013 at 12:01 am</li>
+      <li>5/9/2014</li>
       <li>Check-In Time:</li>
-      <li>3:00pm</li>
+      <li>4:00pm</li>
       <li>Check Out Time:</li>
-      <li>12:00pm</li>
+      <li>11:00am</li>
     </ul>
 
-  <p>At the cutoff date, the Hotel will release the unreserved rooms for general sale. Any new reservations or revisions to existing reservations received after the
-cutoff date will be accepted at the best available rate upon availability.
-Special Requests: Any special requests for accommodations will be noted, but cannot be guaranteed. (i.e. Room types, room locations, connecting rooms).
+  <p>At the cutoff date, the Hotel will release the unreserved rooms for general sale. Any new reservations or revisions to existing reservations received after the cutoff date will be accepted at the group rate upon availability.
   </p>
  
-  <p>INDIVIDUAL ROOM CANCELLATION POLICY
-All individual room reservations must be cancelled by Thursday, June 13, 2013 at 12:01 am. In the event individual room reservations are cancelled less than 3 days prior to arrival, the individual or Group agrees to pay the Hotel a cancellation fee equal to the first nights room and tax. Cancellation includes length of stay reduction(s) within the designated 3 days prior to arrival and are also subject to the above stated cancellation fee.
-  </p>
--->
 
   <h1>Contact</h1>
 
