Finish off new BAT

--- a/src/bat1006.html
+++ b/src/bat1006.html
@@ -16,7 +16,8 @@
     <li>NFSv4.2 prototypes</li>
     <li>NFSv4.0 Migration</li>
     <li>FedFS prototypes</li>
-    <li>RDMAli>
+    <li>New layout types</li>
+    <li>RDMA</li>
   </ul>
 
   <h1>Talks</h1>
