Updated the hotel and Restaurants

--- a/src/bat1006.html
+++ b/src/bat1006.html
@@ -49,23 +49,38 @@
 
   <h1>Lodging</h1>
   <h3> Bakeathon Recommended Hotel Information</h3>
-<!--
 
-  <p>  There are 25 blocked rooms, 25 King Beds (if you need double beds just let me (or them) know).</p>
-  <p>  Use the keywords <b>Red Hat Bakeathon</b> to refer to the room block.</p>
+<p>
+This year I've have blocked off 20 rooms in two different 
+hotels. Use the keywords <b>Red Hat</b> or <b>Bakeathon</b></b> when 
+referring  to the blocked rooms with both hotels.
+</p>
+<a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/B/BOSWFHX-RED-20141006/index.jhtml">Hampton Inn & Suites Westford</a>
+<ul>
+   <li>It is basically brand new (2 or 3yrs old)</li>
+   <li>No bar but there is an 
+   <font color="red">
+   <a href=http://www.chilis.com/EN/Pages/LocationLanding.aspx?RestaurantId=408.002.0840&Tab=0&OnlineEnabled=True&DeliveryEnabled=False&Country=US>Chili's</a> 
+   </font>
+   with walking distance.</li>
+   <li>A bit further (2.0 mi, 5 mins vs 1.0mi, 2 mins).</li>
+   <li>A bit more expensive, (112.00 vs 105.00).</li>
+   <li><b>Address:</b> 9 Nixon Road Westford, MA 01886 P:978-392-1555 F:978-392-1566</li>
+   <li> 
+   <a href=https://www.google.com/maps/place/Hampton+Inn+%26+Suites+Westford-Chelmsford/@42.573636,-71.417933,17z/data=!3m1!4b1!4m2!3m1!1s0x89e3bd7b53e77a01:0x30ec99fd24efadbc>Google Map</a>
+   </li>
+</ul>
 
-    <ul>
-      <li><a href="http://westfordregency.com/">Westford Regency Inn</a></li>
-      <li>219 Littleton RD</li>
-      <li>Westford, MA 01886</li>
-      <li>Phone: (978) 692-8200</li>
-      <li><a href="http://westfordregency.com/directions/driving-directions/">Directions</a></li>
-	  <li><a href="https://maps.google.com/maps?saddr=Westford+Regency+Inn+and+Conference+Center,+Littleton+Road,+Westford,+MA&daddr=Red+Hat+Inc,+314+Littleton+Road,+Westford,+MA+01886&hl=en&sll=42.742628,-71.41479&sspn=0.693884,1.242828&geocode=FcF4iQIdOg6--yE3UZM6hskxbSlvJnK31JfjiTE3UZM6hskxbQ%3BFX1SiQId8Nm9-ym_QV2cOZbjiTFfxnYEp11Rtw&oq=Westford+Regency+Inn&mra=ls&t=m&z=16">Map</a></li>
+<a href="http://westfordregency.com/">Westford Regency Inn</a>
+<ul>
+    <li>Some people were not happy with their rooms</li>
+    <li>There is a bar that has been "steved tested" ;-) </li>
+    <li>There is a bunch of stores with in walking distance </li>
+    <li><b>Address:</b> 219 Littleton RD, Westford, MA 01886 Phone: (978) 692-8200</li>
+	<li><a href="https://maps.google.com/maps?saddr=Westford+Regency+Inn+and+Conference+Center,+Littleton+Road,+Westford,+MA&daddr=Red+Hat+Inc,+314+Littleton+Road,+Westford,+MA+01886&hl=en&sll=42.742628,-71.41479&sspn=0.693884,1.242828&geocode=FcF4iQIdOg6--yE3UZM6hskxbSlvJnK31JfjiTE3UZM6hskxbQ%3BFX1SiQId8Nm9-ym_QV2cOZbjiTFfxnYEp11Rtw&oq=Westford+Regency+Inn&mra=ls&t=m&z=16">Google Map</a></li>
     </ul> 
  
-  <p>Call or have your travel call for booking the block rate: $105 nightly room rate. </p> 
-  <p>The Bookings need to happen before <b>Mon Sept 2ed</b></p>
---!>
+  <p>For both hotels, book the rooms by <b>Sat Sept 6th</b> to get booking the block rates</p>
 
 
   <h1>Airports</h1> 
@@ -77,30 +92,32 @@
 	<a href="https://maps.google.com/maps?saddr=Manchester-Boston+Regional+Airport,+Airport+Road,+Manchester,+NH&daddr=Red+Hat+Inc,+314+Littleton+Road,+Westford,+MA+01886&hl=en&sll=42.485696,-71.231867&sspn=0.348378,0.621414&geocode=FfoCjwIdzdG9-yE8iOTOzDbWNyndFxuINkziiTE8iOTOzDbWNw%3BFX1SiQId8Nm9-ym_QV2cOZbjiTFfxnYEp11Rtw&oq=Manchester+A&mra=ls&t=m&z=10">Manchester, NH (MHT) (38 mi, 40 mins)</a>
 	</li>
 	</ol>
-	<p>Note: The Manchester Airport is much less congested than Boston Logan</p> 
+	<p>Note: The Manchester Airport is much less congested than Boston Logan, 
+	   but it is hard to get nnon-stop flights</p> 
 
   <h1>Restaurants</h1> 
   <ol>
   <li>
-     Burton Grill, 1 Cornerstone Square  Westford, MA 01886, (978) 692-1220,
-     <a href="http://www.burtonsgrill.com/">www.burtonsgrill.com</a>
+     <a href="http://www.burtonsgrill.com/">Burton Grill</a>,
+	 1 Cornerstone Square  Westford, MA 01886, (978) 692-1220
 
   </li>
   <li>
-      Eviva Cucina, 7 Cornerstone Square  Westford, MA 01886, (978) 692-9050,
-      <a href="http://www.evvivacucina.com/">www.evvivacucina.com</a>
+      <a href="http://www.evvivacucina.com/">Eviva Cucina</a>,
+      7 Cornerstone Square  Westford, MA 01886, (978) 692-9050,
   </li>
   <li>
-      Moonstones, 185 Chelmsford St Chelmsford, MA 01824, (978) 256-7777,
-      <a href="http://www.moonstones.com/">www.moonstones.com</a>
+      <a href="http://gofiveguys.com/menu/five-guys-westford/">Five Guys</a>,
+	  10 Cornerstone Square, Westford, MA 01886, (978) 692-6008 
   </li>
   <li>
-      Fishbones, 34 Central Square  Chelmsford, MA 01824, (978) 250-0101  
-      <a href="http://www.fishbonesofchelmsford.com">www.fishbones.com</a>
+   <a href=http://www.chilis.com/EN/Pages/LocationLanding.aspx?RestaurantId=408.002.0840&Tab=0&OnlineEnabled=True&DeliveryEnabled=False&Country=US>Chili's</a> ,
+      137 Littleton Road, Westford, MA, 978-692-8498
   </li>
   <li>
-      Gibbet Hill, 61 Lowell Road Groton, MA,  978-448-2900, 
-      <a href="http://www.gibbethillgrill.com">www.gibbethillgrill.com</a>
+      <a href="http://www.britishbeer.com//westford">British Beer Company</a>,
+      149 Littleton Road • Westford, MA 01886, 978-577-6034 
+
   </li>
   </ol>
   <h1>Contact</h1>
