Added Current Attendance pointer
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bat1006.html
+++ b/src/bat1006.html
@@ -35,6 +35,9 @@
    <p>By the way, please look at the <a href="/Documents/Requirements/event_hosting.html">Event Hosting Requirements</a> and let us know if you plan to use
       a network service not listed.</p>
 
+  <h1>Current Attendance</h1>
+     <a href="/Events/2014/October/Bakeathon-attedance-14.pdf">Who is coming</a>
+
   <h1>Shipping Address</h1>
 
     <a href="https://maps.google.com/maps?q=Red+Hat+Inc,+314+Littleton+Rd,+Westford,+MA&hl=en&sll=42.553981,-71.443984&sspn=0.010875,0.019419&oq=Red+Hat+314+Littleton+Rd,+Westford,&hq=Red+Hat+Inc,&hnear=314+Littleton+Rd,+Westford,+Massachusetts+01886&t=m&z=16">Red Hat 314 Littleton Rd, Westford, MA 01886</a></li>
