Added the NFS/RDMA conclave info
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bat1006.html
+++ b/src/bat1006.html
@@ -20,9 +20,29 @@
     <li>RDMA</li>
   </ul>
 
-  <h1>Talks</h1>
+  <h1>RDMA Conclave</h1>
 
-  <p>No talks are scheduled</p>
+  <p>On the morning of Wednesday, October 8 (09:00 AM EDT), the bake-a-thon organizers will
+     host an NFS/RDMA conclave. The topic of the meeting is "NFS/RDMA in
+	 Enterprise Linux." We'll discuss:<p>
+  <ul>
+    <li>Adapter and fabric diversity</li>
+    <li>Troubleshooting tools</li>
+    <li>NFS server support</li>
+    <li>Continuous testing strategies</li>
+  </ul>
+
+  <p> In other words, what it will take in the long run to make NFS/RDMA a
+      vibrant alternative to NFS on IPoIB in Enterprise Linux distributions.<p>
+  
+  <p> Calling Info:<p>
+  <ul>
+    <li>U.S. and Canada: (800) 451-8679</li>
+	<li> <a href="https://www.intercallonline.com/listNumbersByCode.action?confCode=5642721552">
+	      World wide toll free numbers</a>
+	</li>
+    <li>Conference code: 564.272.1552</li>
+  </ul>
 
   <h1>Registration</h1>
 
