Added Chuck Lever's NFS/RDMA conclave slides from BAT 2014
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bats/pre_dir1_talks.html
+++ b/src/bats/pre_dir1_talks.html
@@ -42,6 +42,7 @@
 		<h3>Quick Jump to BakeAThon Talks</h3>
 
 		<a class="cmenulink" href="/Documents/BakeAThon/2012/index.html">2012</a>
+		<a class="cmenulink" href="/Documents/BakeAThon/2014/index.html">2014</a>
 
 	</div>
 
