--- a/src/announce.html
+++ b/src/announce.html
@@ -1,5 +1,5 @@
   <ul>
-    <li><a href="/Events/2014/October/BAT/index.html">October 2014 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
+    <li><a href="http://www.connectathon.info">Connecthathon 2015</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
     <li><a href="/Documents/ConnectAThon/index.html">Archive of Connectathon presentations</a>.</li>
     <li><a href="/Documents/nasconf/index.html">Archive of NAS Conference presentations</a>.</li>
   </ul>
