--- a/src/events.html
+++ b/src/events.html
@@ -1,11 +1,12 @@
 <h1> On deck </h1>
 <ul>
-  <li><a href="http://www.connectathon.info">Connecthathon 2015</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
+  <li><a href="/Events/2015/June/BAT/index.html">June 2015 BAT</a> - hosted by <a href="http://www.netapp.com">NetApp</a> and <a href="http://www.primarydata.com">Primary Data</a>.</li>
 </ul>
 
 <h1> Living in past glory </h1>
 
 <ul>
+  <li><a href="http://www.connectathon.info">Connecthathon 2015</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
   <li><a href="/Events/2014/October/BAT/index.html">October 2014 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
   <li><a href="/Events/2014/June/BAT/index.html">June 2014 BAT</a> - hosted by <a href="http://www.netapp.com">NetApp</a> and <a href="http://www.primarydata.com">Primary Data</a>.</li>
   <li><a href="http://www.connectathon.info">Connecthathon 2014</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
