--- a/src/announce.html
+++ b/src/announce.html
@@ -1,5 +1,5 @@
   <ul>
-    <li><a href="http://www.connectathon.info">Connecthathon 2015</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
+    <li><a href="/Events/2015/June/BAT/index.html">June 2015 BAT</a> - hosted by <a href="http://www.netapp.com">NetApp</a> and <a href="http://www.primarydata.com">Primary Data</a>.</li>
     <li><a href="/Documents/ConnectAThon/index.html">Archive of Connectathon presentations</a>.</li>
     <li><a href="/Documents/nasconf/index.html">Archive of NAS Conference presentations</a>.</li>
   </ul>
