Webers Inn room block for bat0615.html

--- a/src/bat0615.html
+++ b/src/bat0615.html
@@ -53,7 +53,8 @@
   <h1>Lodging</h1>
 
   <h3> Bakeathon Recommended Hotel Information</h3>
-  <p>  We are negtiating a room block with Webers Inn. Will post information soon</p>
+ <p>  To make reservations under the group room block go to <a href="http://uswiaa.webhotel.microsdc.us/bp/search_rooms.jsp">the Weber's reservation page</a> and enter your arrival & departure dates and NETAPP2015 in the group code field before clicking on check availability and the rooms for this block will be available for you to reserve online or call Weber's at (734) 769-2500.
+  </p>
     <ul>
       <li><a href="http://www.webersinn.com">Weber's Ann Arbor</a></li>
       <li>3050 Jackson Rd.</li>
@@ -61,6 +62,13 @@
       <li>Phone: 734-769-2500</li>
       <li>Toll Free: 800-443-3050</li>
     </ul>
+
+<p>
+Single room rate is $139.00 for a single, $149.00 for a double room, 
+taxes not included.
+Check in time is 4:00 p.m., and check out time is 11:00 a.m.
+Please park at the hotel/banquet entrance.
+</p>
 
   <h1>Contact</h1>
 
