--- a/src/bat0615.html
+++ b/src/bat0615.html
@@ -46,7 +46,7 @@
     </ul>
     <h2>Map</h2>
     <ul>
-      <li><a href="ihttps://maps.google.com/maps?q=118+S.+Main+St.+Ann+Arbor,+MI&ie=UTF-8&hq=&hnear=0x883cae3da5236601:0xaf4b55133b29d35e,118+S+Main+St,+Ann+Arbor,+MI+48104&gl=us&ei=qbhAUZDrJ4vyyAGgk4CICQ&ved=0CDAQ8gEwAA">Map</a> to <a href="http://workantile.com">Workantile</a>.</li>
+      <li><a href="https://maps.google.com/maps?q=118+S.+Main+St.+Ann+Arbor,+MI&ie=UTF-8&hq=&hnear=0x883cae3da5236601:0xaf4b55133b29d35e,118+S+Main+St,+Ann+Arbor,+MI+48104&gl=us&ei=qbhAUZDrJ4vyyAGgk4CICQ&ved=0CDAQ8gEwAA">Map</a> to <a href="http://workantile.com">Workantile</a>.</li>
       </li>
     </ul>
 
