Updated hotel info on the Oct 2015 BAT
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bat1015.html
+++ b/src/bat1015.html
@@ -16,8 +16,8 @@
     <li>NFSv4.2 prototypes</li>
     <li>NFSv4.0 Migration</li>
     <li>FedFS prototypes</li>
-    <li>New layout types</li>
-    <li>RDMA</li>
+    <li>Flex File layouts</li>
+    <li>NFS/RDMA</li>
   </ul>
 
   <h1>Registration</h1>
@@ -54,23 +54,29 @@
   <h1>Lodging</h1>
   <h3> Bakeathon Recommended Hotel Information</h3>
 
-<p>
-This year I've have blocked off 20 rooms in two different 
-hotels. Use the keywords <b>Red Hat</b> or <b>Bakeathon</b></b> when 
-referring  to the blocked rooms with both hotels.
-</p>
+<h3>
 <a href="http://westfordregency.com/">Westford Regency Inn</a>
+</h3>
 <ul>
+    <li><b>Address:</b> 219 Littleton RD, Westford, MA 01886 Phone: (978) 692-8200</li>
+   <li><b>Red Hat Rate:</b> $105.00 + Tax </li>
+   <li><b>Block Access Code:</b> Bake-a-thon</li>
     <li>Updated rooms</li>
     <li>Shuttle Bus available to/from the Red Office</li>
     <li>A "steved tested" bar ;-)</li>
     <li>There is a number of stores with in walking distance </li>
-    <li><b>Address:</b> 219 Littleton RD, Westford, MA 01886 Phone: (978) 692-8200</li>
 	<li><a href="https://maps.google.com/maps?saddr=Westford+Regency+Inn+and+Conference+Center,+Littleton+Road,+Westford,+MA&daddr=Red+Hat+Inc,+314+Littleton+Road,+Westford,+MA+01886&hl=en&sll=42.742628,-71.41479&sspn=0.693884,1.242828&geocode=FcF4iQIdOg6--yE3UZM6hskxbSlvJnK31JfjiTE3UZM6hskxbQ%3BFX1SiQId8Nm9-ym_QV2cOZbjiTFfxnYEp11Rtw&oq=Westford+Regency+Inn&mra=ls&t=m&z=16">Google Map</a></li>
     </ul> 
+<p>The block expires on <b>Sat Sept 12th</b></p>
+<p>Contact Person:<a href="mailto:mstockwell@westfordregency.com">Mary Stockwell</a></p>
  
+<h3>
 <a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/B/BOSWFHX-RED-20141006/index.jhtml">Hampton Inn & Suites Westford</a>
+</h3>
 <ul>
+   <li><b>Address:</b> 9 Nixon Road Westford, MA 01886 P:978-392-1555 F:978-392-1566</li>
+   <li><b>Red Hat Rate:</b> $117.00 + Tax </li>
+   <li><b>Block Access Code:</b> BATW</li>
    <li>It is basically brand new (2 or 3yrs old)</li>
    <li>No bar but there is an 
    <font color="red">
@@ -79,22 +85,21 @@ referring  to the blocked rooms with both hotels.
    with walking distance.</li>
    <li>A bit further (2.0 mi, 5 mins vs 1.0mi, 2 mins).</li>
    <li>A bit more expensive, (112.00 vs 105.00).</li>
-   <li><b>Address:</b> 9 Nixon Road Westford, MA 01886 P:978-392-1555 F:978-392-1566</li>
    <li> 
    <a href=https://www.google.com/maps/place/Hampton+Inn+%26+Suites+Westford-Chelmsford/@42.573636,-71.417933,17z/data=!3m1!4b1!4m2!3m1!1s0x89e3bd7b53e77a01:0x30ec99fd24efadbc>Google Map</a>
    </li>
 </ul>
-
-  <p>For both hotels, book the rooms by <b>Sat Sept 6th</b> to get booking the block rates</p>
+</p>The block expires on <b>Sat Sept 12th</b></p>
+<p>Contact Person:<a href="mailto:Kathy.Caisse@hilton.com">Kathy Caisse</a></p>
 
 
   <h1>Airports</h1> 
 	<ol>
 	<li>
-	<a href="https://maps.google.com/maps?saddr=Logan+International+Airport,+Boston,+MA&daddr=Red+Hat+Inc,+314+Littleton+Road,+Westford,+MA+01886&hl=en&sll=42.555246,-71.443985&sspn=0.010875,0.019419&geocode=FQeChgId41HE-yFEUS0fw5STDCk3SdrVFHDjiTFEUS0fw5STDA%3BFX1SiQId8Nm9-ym_QV2cOZbjiTFfxnYEp11Rtw&oq=Log&mra=ls&t=m&z=11">Boston (BOS) (38 mi, 43 mins)</a>
+	<a href="https://maps.google.com/maps?saddr=Manchester-Boston+Regional+Airport,+Airport+Road,+Manchester,+NH&daddr=Red+Hat+Inc,+314+Littleton+Road,+Westford,+MA+01886&hl=en&sll=42.485696,-71.231867&sspn=0.348378,0.621414&geocode=FfoCjwIdzdG9-yE8iOTOzDbWNyndFxuINkziiTE8iOTOzDbWNw%3BFX1SiQId8Nm9-ym_QV2cOZbjiTFfxnYEp11Rtw&oq=Manchester+A&mra=ls&t=m&z=10">Manchester, NH (MHT) (38 mi, 40 mins)</a>
 	</li>
 	<li>
-	<a href="https://maps.google.com/maps?saddr=Manchester-Boston+Regional+Airport,+Airport+Road,+Manchester,+NH&daddr=Red+Hat+Inc,+314+Littleton+Road,+Westford,+MA+01886&hl=en&sll=42.485696,-71.231867&sspn=0.348378,0.621414&geocode=FfoCjwIdzdG9-yE8iOTOzDbWNyndFxuINkziiTE8iOTOzDbWNw%3BFX1SiQId8Nm9-ym_QV2cOZbjiTFfxnYEp11Rtw&oq=Manchester+A&mra=ls&t=m&z=10">Manchester, NH (MHT) (38 mi, 40 mins)</a>
+	<a href="https://maps.google.com/maps?saddr=Logan+International+Airport,+Boston,+MA&daddr=Red+Hat+Inc,+314+Littleton+Road,+Westford,+MA+01886&hl=en&sll=42.555246,-71.443985&sspn=0.010875,0.019419&geocode=FQeChgId41HE-yFEUS0fw5STDCk3SdrVFHDjiTFEUS0fw5STDA%3BFX1SiQId8Nm9-ym_QV2cOZbjiTFfxnYEp11Rtw&oq=Log&mra=ls&t=m&z=11">Boston (BOS) (38 mi, 43 mins)</a>
 	</li>
 	</ol>
 	<p>Note: The Manchester Airport is much less congested than Boston Logan, 
