Updated block access code for the Oct 2015 BAT
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bat1015.html
+++ b/src/bat1015.html
@@ -60,7 +60,7 @@
 <ul>
     <li><b>Address:</b> 219 Littleton RD, Westford, MA 01886 Phone: (978) 692-8200</li>
    <li><b>Red Hat Rate:</b> $105.00 + Tax </li>
-   <li><b>Block Access Code:</b> Bake-a-thon</li>
+   <li><b>Block Access Code:</b> REDH</li>
     <li>Updated rooms</li>
     <li>Shuttle Bus available to/from the Red Office</li>
     <li>A "steved tested" bar ;-)</li>
