Stress no room block
Signed-off-by: Tom Haynes <loghyr@primarydata.com>

--- a/src/bat0616.html
+++ b/src/bat0616.html
@@ -70,7 +70,7 @@ Please park at the hotel/banquet entrance.
 
   <h3> Other Hotel Information</h3>
 
-<p> Ann Arbor has a new downtown hotel for those travelers with a larger budget. `No room block.</p>
+<p> Ann Arbor has a new downtown hotel for those travelers with a larger budget. <b>No room block.</b></p>
 
     <ul>
       <li><a href="http://www.marriott.com/reservation/availabilityCalendar.mi?propertyCode=arbdt">Marriott Residence Inn Ann Arbor Downtown</a></li>
