--- a/src/announce.html
+++ b/src/announce.html
@@ -1,4 +1,5 @@
   <ul>
+    <li><a href="/Events/2016/October/BAT/index.html">October 2016 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
     <li><a href="/Events/2016/June/BAT/index.html">June 2016 BAT</a> - hosted by <a href="http://www.netapp.com">NetApp</a> and <a href="http://www.primarydata.com">Primary Data</a>.</li>
     <li><a href="/Events/2015/October/BAT/index.html">October 2015 BAT</a> - hosted by <a href="http://www.redhat.com">redhat</a>
     <li><a href="/Documents/ConnectAThon/index.html">Archive of Connectathon presentations</a>.</li>
