Updated the block access codes
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bat1016.html
+++ b/src/bat1016.html
@@ -71,7 +71,7 @@
 <ul>
    <li><b>Address:</b> 9 Nixon Road Westford, MA 01886 P:978-392-1555 F:978-392-1566</li>
    <li><b>Red Hat Rate:</b> $119.00 + Tax </li>
-   <li><b>Block Access Code:</b> BATW</li>
+   <li><b>Block Access Code:</b> Red Hat Bakeathon</li>
    <li>It is basically brand new (2 or 3yrs old)</li>
    <li>No bar but there is an 
    <font color="red">
@@ -90,7 +90,7 @@
 <ul>
    <li><b>Address:</b>7 Lan Drive  Westford  Massachusetts 01886 Ph: +1-978-392-1407 </li>
    <li><b>Red Hat Rate:</b> $129.00 + Tax </li>
-   <li><b>Phone Block Access Code:</b>RCH</li>
+   <li><b>Phone Block Access Code:</b>Red Hat Bakeathon</li>
    <li><a href=http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Red%20Hat%20Group%5EBOSRW%60RHCRHCA%7CRHCRHCB%60129.00%60USD%60false%604%6010/17/16%6010/22/16%609/17/16&app=resvlink&stop_mobi=yes><b>Online Block Access Link</b></a></li>
    <li>All suites with full kitchen</li>
    <li>Closest to the office (0.9)</li>
