--- a/src/events.html
+++ b/src/events.html
@@ -1,11 +1,12 @@
 <h1> On deck </h1>
 <ul>
-  <li><a href="/Events/2016/June/BAT/index.html">June 2016 BAT</a> - hosted by <a href="http://www.netapp.com">NetApp</a> and <a href="http://www.primarydata.com">Primary Data</a>.</li>
+  <li><a href="/Events/2017/September/BAT/index.html">September 2017 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
 </ul>
 
 <h1> Living in past glory </h1>
 
 <ul>
+  <li><a href="/Events/2016/June/BAT/index.html">June 2016 BAT</a> - hosted by <a href="http://www.netapp.com">NetApp</a> and <a href="http://www.primarydata.com">Primary Data</a>.</li>
   <li><a href="/Events/2015/October/BAT/index.html">October 2015 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
   <li><a href="/Events/2015/June/BAT/index.html">June 2015 BAT</a> - hosted by <a href="http://www.netapp.com">NetApp</a> and <a href="http://www.primarydata.com">Primary Data</a>.</li>
   <li><a href="http://www.connectathon.info">Connecthathon 2015</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
