--- a/src/bat0917.html
+++ b/src/bat0917.html
@@ -54,44 +54,45 @@
 </h3>
 <ul>
     <li><b>Address:</b> 219 Littleton RD, Westford, MA 01886 Phone: (978) 692-8200</li>
-   <li><b>Red Hat Corporate Rate:</b> $105.00 + Tax </li>
+   <li><b>Red Hat Corporate Rate:</b> $115.00 + Tax </li>
     <li>Updated rooms</li>
     <li>Shuttle Bus available to/from the Red Office</li>
     <li>A "steved tested" bar ;-)</li>
     <li>There is a number of stores with in walking distance </li>
 	<li><a href="https://maps.google.com/maps?saddr=Westford+Regency+Inn+and+Conference+Center,+Littleton+Road,+Westford,+MA&daddr=Red+Hat+Inc,+314+Littleton+Road,+Westford,+MA+01886&hl=en&sll=42.742628,-71.41479&sspn=0.693884,1.242828&geocode=FcF4iQIdOg6--yE3UZM6hskxbSlvJnK31JfjiTE3UZM6hskxbQ%3BFX1SiQId8Nm9-ym_QV2cOZbjiTFfxnYEp11Rtw&oq=Westford+Regency+Inn&mra=ls&t=m&z=16">Google Map</a></li>
     </ul> 
-<p>The block expires on <b>Thur Aug 24th</b></p>
-<p>Contact Person:<a href="mailto:JGrusmark@westfordregency.com">Jamie Grusmark</a></p>
+<p>Contact Person:<a href="mailto:<keidens@westfordregency.com>">Kimberly Eidens</a></p>
  
 <h3>
-<a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/B/BOSWFHX-RED-20141006/index.jhtml">Hampton Inn & Suites Westford</a>
+<a href=http:/www.westfordchelmsfordsuites.hamptoninn.com>Hampton Inn & Suites Westford</a>
 </h3>
 <ul>
+   <li><b>Group Code:'BAT'</b> (under 'Add speecial rate code')</li>
    <li><b>Address:</b> 9 Nixon Road Westford, MA 01886 P:978-392-1555 F:978-392-1566</li>
-   <li><b>Red Hat Rate:</b> $119.00 + Tax </li>
+   <li><b>Red Hat Rate:</b> $129.00 + Tax </li>
    <li><b>Block Access Code:</b> Red Hat Bakeathon</li>
-   <li>It is basically brand new (2 or 3yrs old)</li>
+   <li>It is then newest of the three</li>
+   <li>Breakfast included</li>
    <li>No bar but there is an 
-   <font color="red">
-   <a href=http://www.chilis.com/EN/Pages/LocationLanding.aspx?RestaurantId=408.002.0840&Tab=0&OnlineEnabled=True&DeliveryEnabled=False&Country=US>Chili's</a> 
-   </font>
+   <a href=http://www.chilis.com/EN/Pages/LocationLanding.aspx?RestaurantId=408.002.0840&Tab=0&OnlineEnabled=True&DeliveryEnabled=False&Country=US>Chili's</a>,
+   <a href=http://britishbeer.com/location/westford/>British Beer Company</a> and a
+   <a href=https://www.mcdonalds.com/us/en-us/restaurant-locator.html?submit=true&radiusSelected=5&searchText=westford+MA>McDonalds</a>
    with walking distance.</li>
    <li> 
    <a href=https://www.google.com/maps/place/Hampton+Inn+%26+Suites+Westford-Chelmsford/@42.573636,-71.417933,17z/data=!3m1!4b1!4m2!3m1!1s0x89e3bd7b53e77a01:0x30ec99fd24efadbc>Google Map</a>
    </li>
 </ul>
-</p>The block expires on <b>Thur Aug 25th</b></p>
-<p>Contact Person:<a href="mailto:Kathy.Caisse@hilton.com">Kathy Caisse</a></p>
+</p>The block expires on <b>Fri Aug 26th</b></p>
+<p>Contact Person:<a href="mailto:Hilary.Smith2@Hilton.com">Hilary Smith</a></p>
 
 <a href="http://www.marriott.com/hotels/travel/bosrw-residence-inn-boston-westford/">Residence Inn Marriott</a>
 </h3>
 <ul>
    <li><b>Address:</b>7 Lan Drive  Westford  Massachusetts 01886 Ph: +1-978-392-1407 </li>
-   <li><b>Red Hat Rate:</b> $129.00 + Tax </li>
+   <li><b>Red Hat Rate:</b> $130.00 + Tax </li>
    <li><b>Phone Block Access Code:</b>Red Hat Bakeathon</li>
-   <li><a href=http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Red%20Hat%20Group%5EBOSRW%60RHCRHCA%7CRHCRHCB%60129.00%60USD%60false%604%6010/17/16%6010/22/16%609/17/16&app=resvlink&stop_mobi=yes><b>Online Block Access Link</b></a></li>
-   <li>All suites with full kitchen</li>
+   <li><a href=http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Bake%20A%20Thon%5EBOSRW%60REDREDA%7CREDREDB%60130.00%60USD%60false%604%609/25/17%609/29/17%608/25/17&app=resvlink&stop_mobi=yes><b>Online Block Access Link</b></a></li>
+   <li>Free continental breakfast and light dinner </li>
    <li>Closest to the office (0.9)</li>
    <li>Shuttle Bus available to/from the office</li>
    <li>No bar but walking distance to
@@ -107,7 +108,7 @@
    <a href=https://www.google.com/maps/place/7+Lan+Dr,+Westford,+MA+01886/@42.5603974,-71.4328913,17z/data=!3m1!4b1!4m5!3m4!1s0x89e3962cc73f03cd:0x17928dda87934a0e!8m2!3d42.5603935!4d-71.4307026>Google Map</a>
    </li>
 </ul>
-</p>The block expires on <b>Thur Aug 24th</b></p>
+</p>The block expires on <b>Thur Aug 25th</b></p>
 <p>Contact Person:<a href="mailto:Karina.Ortiz@marriott.com">Karina Ortiz</a></p>
 
 
