--- a/src/bat0917.html
+++ b/src/bat0917.html
@@ -54,7 +54,7 @@
 </h3>
 <ul>
     <li><b>Address:</b> 219 Littleton RD, Westford, MA 01886 Phone: (978) 692-8200</li>
-   <li><b>Red Hat Corporate Rate:</b> $115.00 + Tax </li>
+   <li><b>Red Hat Corporate Rate:</b> $113.00 + Tax </li>
     <li>Updated rooms</li>
     <li>Shuttle Bus available to/from the Red Office</li>
     <li>A "steved tested" bar ;-)</li>
@@ -67,7 +67,7 @@
 <a href=http:/www.westfordchelmsfordsuites.hamptoninn.com>Hampton Inn & Suites Westford</a>
 </h3>
 <ul>
-   <li><b>Group Code:'BAT'</b> (under 'Add speecial rate code')</li>
+   <li><b>Group Code:'BAT'</b> (under 'Add special rate code')</li>
    <li><b>Address:</b> 9 Nixon Road Westford, MA 01886 P:978-392-1555 F:978-392-1566</li>
    <li><b>Red Hat Rate:</b> $129.00 + Tax </li>
    <li><b>Block Access Code:</b> Red Hat Bakeathon</li>
