Fix link to Hampton
Signed-off-by: Tom Haynes <loghyr@primarydata.com>

--- a/src/bat0917.html
+++ b/src/bat0917.html
@@ -64,7 +64,7 @@
 <p>Contact Person:<a href="mailto:<keidens@westfordregency.com>">Kimberly Eidens</a></p>
  
 <h3>
-<a href=http:/www.westfordchelmsfordsuites.hamptoninn.com>Hampton Inn & Suites Westford</a>
+<a href=http://www.westfordchelmsfordsuites.hamptoninn.com>Hampton Inn & Suites Westford</a>
 </h3>
 <ul>
    <li><b>Group Code:'BAT'</b> (under 'Add special rate code')</li>
