Add links for Chuck's talks
Signed-off-by: Tom Haynes <loghyr@primarydata.com>

--- a/src/bats/pre_dir1_talks.html
+++ b/src/bats/pre_dir1_talks.html
@@ -43,6 +43,7 @@
 
 		<a class="cmenulink" href="/Documents/BakeAThon/2012/index.html">2012</a>
 		<a class="cmenulink" href="/Documents/BakeAThon/2014/index.html">2014</a>
+		<a class="cmenulink" href="/Documents/BakeAThon/2017/index.html">2017</a>
 
 	</div>
 
