--- a/src/bats/talks.html
+++ b/src/bats/talks.html
@@ -3,4 +3,5 @@
 		<ul>
 		<li><h2> <a href="/Documents/BakeAThon/2012/index.html">2012</a> </h2></li>
 		<li><h2> <a href="/Documents/BakeAThon/2014/index.html">2014</a> </h2></li>
+		<li><h2> <a href="/Documents/BakeAThon/2017/index.html">2017</a> </h2></li>
 		</ul>
