--- a/src/bats/2017.html
+++ b/src/bats/2017.html
@@ -1,4 +1,4 @@
-			<tr><td><a href="nfs_rdma_basics1.pdf">NFS/RDMA Basics Part 1</a> </td><td>  Chuck Lever, Oracle</td></tr>
-			<tr><td><a href="nfs_rdma_basics2.pdf">NFS/RDMA Basics Part 2</a> </td><td>  Chuck Lever, Oracle</td></tr>
-			<tr><td><a href="nfs_rdma_basics3.pdf">NFS/RDMA Basics Part 3</a> </td><td>  Chuck Lever, Oracle</td></tr>
+			<tr><td><a href="nfs_rdma_basics1.pdf">Introduction to RDMA verbs</a> </td><td>  Chuck Lever, Oracle</td></tr>
+			<tr><td><a href="nfs_rdma_basics2.pdf">RPC-over-RDMA and NFS/RDMA</a> </td><td>  Chuck Lever, Oracle</td></tr>
+			<tr><td><a href="nfs_rdma_basics3.pdf">Code walk-through</a> </td><td>  Chuck Lever, Oracle</td></tr>
 
