--- a/src/bats/2017.html
+++ b/src/bats/2017.html
@@ -1,4 +1,4 @@
-			<tr><td><a href="nfs_rdma_basics1.pdf">Introduction to RDMA verbs</a> </td><td>  Chuck Lever, Oracle</td></tr>
-			<tr><td><a href="nfs_rdma_basics2.pdf">RPC-over-RDMA and NFS/RDMA</a> </td><td>  Chuck Lever, Oracle</td></tr>
-			<tr><td><a href="nfs_rdma_basics3.pdf">Code walk-through</a> </td><td>  Chuck Lever, Oracle</td></tr>
+			<tr><td><a href="nfs_rdma_basics1.pdf">Introduction to RDMA verbs</a> <a href="https://bluejeans.com/s/I3Ubu/">(recording)</a> </td><td>  Chuck Lever, Oracle</td></tr>
+			<tr><td><a href="nfs_rdma_basics2.pdf">RPC-over-RDMA and NFS/RDMA</a> <a href="https://bluejeans.com/s/rXK58/">(recording)</a> </td><td>  Chuck Lever, Oracle</td></tr>
+			<tr><td><a href="nfs_rdma_basics3.pdf">Code walk-through</a> <a href="https://bluejeans.com/s/prsQe/">(recording)</a> </td><td>  Chuck Lever, Oracle</td></tr>
 
