Updated the Online Block Access Link
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bat0918.html
+++ b/src/bat0918.html
@@ -91,7 +91,7 @@
    <li><b>Address:</b>7 Lan Drive  Westford  Massachusetts 01886 Ph: +1-978-392-1407 </li>
    <li><b>Red Hat Rate:</b> $130.00 + Tax </li>
    <li><b>Phone Block Access Code:</b>Red Hat Bakeathon</li>
-   <li><a href=http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Bake%20A%20Thon%5EBOSRW%60REDREDA%7CREDREDB%60130.00%60USD%60false%604%609/25/17%609/29/17%608/25/17&app=resvlink&stop_mobi=yes><b>Online Block Access Link</b></a></li>
+   <li><a href=http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Red%20Hat%20Bake-A-Thon%5EBOSRW%60BAKBAKA%60130.00%60USD%60false%604%609/17/18%609/21/18%608/18/18&app=resvlink&stop_mobi=yes<b>Online Block Access Link</b></a></li>
    <li>Free continental breakfast and light dinner </li>
    <li>Closest to the office (0.9)</li>
    <li>Shuttle Bus available to/from the office</li>
