Added the Attedance sheet
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bat0918.html
+++ b/src/bat0918.html
@@ -17,6 +17,7 @@
     <li>NFSv4.0 Migration</li>
     <li>Flex File layouts</li>
     <li>NFS/RDMA</li>
+    <li>RoCE</li>
   </ul>
 
   <h1>Registration</h1>
