Group Code for Hapmton Inn
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bat0918.html
+++ b/src/bat0918.html
@@ -68,7 +68,7 @@
 <a href=http://www.westfordchelmsfordsuites.hamptoninn.com>Hampton Inn & Suites Westford</a>
 </h3>
 <ul>
-   <li><b>Group Code:'BAT'</b> (under 'Add special rate code')</li>
+   <li><b>Group Code:'BAK'</b> (under 'Add special rate code')</li>
    <li><b>Address:</b> 9 Nixon Road Westford, MA 01886 P:978-392-1555 F:978-392-1566</li>
    <li><b>Red Hat Rate:</b> $130.00 + Tax </li>
    <li><b>Block Access Code:</b> Red Hat Bakeathon</li>
