--- a/src/announce.html
+++ b/src/announce.html
@@ -1,4 +1,5 @@
   <ul>
+    <li><a href="/Events/2019/May/BAT/index.html">May 2019 BAT</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
     <li><a href="/Events/2018/September/BAT/index.html">September 2018 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
     <li><a href="/Events/2018/March/BAT/index.html">March 2018 BAT</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
     <li><a href="/Events/2017/September/BAT/index.html">September 2017 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
