Updated Hotel information
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bat1019.html
+++ b/src/bat1019.html
@@ -68,7 +68,7 @@
 <a href=http://www.westfordchelmsfordsuites.hamptoninn.com>Hampton Inn & Suites Westford</a>
 </h3>
 <ul>
-   <li><b>Group Code:'BAK'</b> (under 'Add special rate code')</li>
+   <li><a href=http://group.hamptoninn.com/RedHatBakeAThon-Oct14<b>Online Block Access Link</b></a></li>
    <li><b>Address:</b> 9 Nixon Road Westford, MA 01886 P:978-392-1555 F:978-392-1566</li>
    <li><b>Red Hat Rate:</b> $129.00 + Tax </li>
    <li><b>Block Access Code:</b> Red Hat Bakeathon</li>
@@ -85,14 +85,14 @@
 </ul>
 </p>The block expires on <b>Wed Sept 14th</b></p>
 <p>Contact Person:<a href="mailto:Hilary.Smith2@Hilton.com">Hilary Smith</a></p>
-
+<h3>
 <a href="http://www.marriott.com/hotels/travel/bosrw-residence-inn-boston-westford/">Residence Inn Marriott</a>
 </h3>
 <ul>
+   <li><a href=https://www.marriott.com/events/start.mi?id=1562766838455&key=GRP<b>Online Block Access</b></a></li>
    <li><b>Address:</b>7 Lan Drive  Westford  Massachusetts 01886 Ph: +1-978-392-1407 </li>
-   <li><b>Red Hat Rate:</b> $129.00 + Tax </li>
+   <li><b>Red Hat Rate:</b> $135.00 + Tax </li>
    <li><b>Phone Block Access Code:</b>Red Hat Bakeathon</li>
-   <li><a href=http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Red%20Hat%20Bake-A-Thon%5EBOSRW%60BAKBAKA%60130.00%60USD%60false%604%609/17/18%609/21/18%608/18/18&app=resvlink&stop_mobi=yes<b>Online Block Access Link</b></a></li>
    <li>Free continental breakfast and light dinner </li>
    <li>Closest to the office (0.9)</li>
    <li>Shuttle Bus available to/from the office</li>
