Fixed a typo in the Res link
Signed-off-by: Steve Dickson <steved@redhat.com>

--- a/src/bat1019.html
+++ b/src/bat1019.html
@@ -89,7 +89,7 @@
 <a href="http://www.marriott.com/hotels/travel/bosrw-residence-inn-boston-westford/">Residence Inn Marriott</a>
 </h3>
 <ul>
-   <li><a href=https://www.marriott.com/events/start.mi?id=1562766838455&key=GRP<b>Online Block Access</b></a></li>
+   <li><a href=https://www.marriott.com/events/start.mi?id=1562766838455&key=GRP><b>Online Block Access</b></a></li>
    <li><b>Address:</b>7 Lan Drive  Westford  Massachusetts 01886 Ph: +1-978-392-1407 </li>
    <li><b>Red Hat Rate:</b> $135.00 + Tax </li>
    <li><b>Phone Block Access Code:</b>Red Hat Bakeathon</li>
