--- a/src/events.html
+++ b/src/events.html
@@ -1,11 +1,12 @@
 <h1> On deck </h1>
-  <li><a href="/Events/2019/Oct/BAT/index.html">October 2019 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
+  <li><a href="/Events/2020/May/BAT/index.html">May 2020 BAT</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
 <ul>
 </ul>
 
 <h1> Living in past glory </h1>
 
 <ul>
+  <li><a href="/Events/2019/Oct/BAT/index.html">October 2019 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
   <li><a href="/Events/2019/May/BAT/index.html">May 2019 BAT</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
   <li><a href="/Events/2018/March/BAT/index.html">March 2018 BAT</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
   <li><a href="/Events/2017/September/BAT/index.html">September 2017 BAT</a> - hosted by <a href="http://www.redhat.com">Red Hat</a>.</li>
