Update to reflect cancellation of the May 2020 event.

--- a/src/events.html
+++ b/src/events.html
@@ -1,5 +1,5 @@
 <h1> On deck </h1>
-  <li><a href="/Events/2020/May/BAT/index.html">May 2020 BAT</a> - hosted by <a href="http://www.oracle.com">Oracle</a>.</li>
+  <li><a href="/Events/2020/May/BAT/index.html">May 2020 BAT</a> - hosted by <a href="http://www.oracle.com">Oracle</a><font size="+2">    This event has been cancelled</font>.</li>
 <ul>
 </ul>
 
